// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`enums.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  b = "b",
}

enum E3 {
  c1 = "c1",
  c2 = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  b = "b",
}

enum E3 {
  c1 = "c1",
  c2 = "c2",
}

enum E4 {
  "d1" = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  "b" = "b",
}

enum E3 {
  c1 = "c1",
  "c2" = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
interface I1 {
  method(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  property: string;
  property2: string;
  "property-3": string;
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
interface I1 {
  "method"(): string;
  "method2"(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  "property2": string;
  "property-3": string;
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
type T1 = {
  method(): string;
  method2(): string;
  "method-3"(): string;
};

type T2 = {
  property: string;
  property2: string;
  "property-3": string;
};

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
type T1 = {
  "method"(): string;
  "method2"(): string;
  "method-3"(): string;
};

type T2 = {
  "property": string;
  "property2": string;
  "property-3": string;
};

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

=====================================output=====================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
};

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;
